--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,113 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap");
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: 1.6rem;
+  background: #ffffff;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 700;
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 1rem;
+}
+
+.logo {
+  color: #A682FF;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.menu {
+  list-style-type: none;
+}
+
+.menu li {
+  display: inline-block;
+}
+
+.menu li a {
+  text-decoration: none;
+  color: #A682FF;
+  margin-left: 1rem;
+  text-transform: uppercase;
+  letter-spacing: -.0125rem;
+}
+
+.mobile {
+  font-size: 2.5rem;
+  color: #A682FF;
+  cursor: pointer;
+  display: none !important;
+}
+
+@media screen and (max-width: 800px) {
+  .logo {
+    z-index: 999;
+  }
+  .menu {
+    position: absolute;
+    top: 0%;
+    left: -100%;
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+  }
+  .menu li {
+    display: block !important;
+  }
+  .menu li:first-child {
+    margin-top: 8rem;
+  }
+  .menu li a {
+    font-size: 2.2rem;
+    margin-top: 1rem;
+    display: inline-block;
+  }
+  .mobile {
+    position: absolute;
+    right: 3%;
+    display: block !important;
+  }
+  .open {
+    left: 0 !important;
+    background: #715AFF;
+  }
+  .anim {
+    -webkit-transition: all 500ms ease;
+    transition: all 500ms ease;
+  }
+}
+/*# sourceMappingURL=style.css.map */
